--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,9 @@ body{
 header{
     height: 175px;
     background-color: sandybrown;
+    line-height: 175px;
+    padding-left: 80px;
+    font-size: 30px;
 }
 
 main{
@@ -25,7 +28,20 @@ main{
     overflow: auto;
 }
 
+#ingredients img{
+    width: 50px;
+}
+
 footer{
     height: 150px;
     background-color: salmon;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 900;
+}
+footer > div{
+    margin: 0 80px;
 }
