--- a/css/style.css
+++ b/css/style.css
@@ -4,20 +4,35 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 body{
     background-color: wheat;
 }
+.container{
+    width: 65%;
+}
 
+/* text */
+ul{
+    list-style: none;
+}
 a{
     color: #fff;
 }
-
-.container{
-    width: 80%;
+h2{
+    font-size: 30px;
+    font-weight: 400;
+    margin: 30px 0;
 }
 
-/* DEBUG */
+/* placeholder scompare sul focus */
+#burgerName:focus::placeholder,
+#couponInput:focus::placeholder{
+    color: transparent;
+}
+
+
+
+/* HEADER */
 header{
     height: 175px;
     background-color: sandybrown;
@@ -26,20 +41,95 @@ header{
     font-size: 30px;
 }
 
+/* MAIN */
 main{
     background-color: #fff;
     height: calc(100vh - 325px);
     overflow: auto;
 }
 
-#ingredients li{
-    cursor: pointer;
-    width: max-content;
+.mainContainer{
+    width: 90%;
+    margin: auto;
 }
 
-#ingredients img{
-    width: 50px;
+/* NAME */
+#name{
+    margin: 60px 0;
 }
+#name input{
+    font-size: 30px;
+    border: none;
+}
+#name input:focus{
+    outline: none;
+}
+
+
+/* INGREDIENTS */
+#ingredients ul{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+#ingredients li{
+    font-size: 20px;
+    cursor: pointer;
+    width: 35%;
+    margin-bottom: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+#ingredients img, 
+#ingredients input{
+    margin: 0 20px;
+}
+#ingredients span{
+    color: indianred;
+}
+#ingredients img{
+    width: 80px;
+}
+
+/* COUPON */
+#coupon{
+    display: flex;
+    align-items: center;
+}
+#coupon label{
+    width: 20%;
+    font-size: 20px;
+}
+#coupon input{
+    border: none;
+    font-size: 20px;
+    background-color: wheat;
+    padding: 10px;
+    border-radius: 5px;
+    width: 80%;
+}
+#coupon input:focus{
+    outline: none;
+}
+
+/* CALCULATE */
+#calculate{
+    text-align: center;
+}
+#calculate button{
+    color: #000;
+    font-size: 20px;
+    background-color: sandybrown;
+    border-radius: 10px;
+    box-shadow: 0;
+    padding: 20px;
+    margin: 50px 0;
+}
+#calculate button:focus{
+    outline: none;
+}
+
 
 footer{
     height: 150px;
